[package]
name = "fastdl_xz_server"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = {version = "*",  default-features = false }
xz2 = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true