[package]
name = "fastdl_xz_server"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = { version = "3.5",  default-features = false }
xz2 = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[features]
filtering = []

[profile.release]
codegen-units = 1
lto = true